--- a/docs/package.json
+++ b/docs/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "@vue/cli-service": "^4.5.10",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "vue-template-compiler": "^2.6.12"
   },
   "bugs": "https://github.com/fjeddy/fl-vue/issues",
   "homepage": "https://fl-vue.fjeddy.com/",
