--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@vue/cli-service": "^4.5.10",
+    "node-sass": "^5.0.0",
+    "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.12"
   },
