--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "axios-retry": "^3.1.9",
-    "bootstrap": "^5.0.0-beta1"
+    "bootstrap": "^5.0.0-beta1",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.5",
