--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "axios": "^0.21.1",
     "axios-retry": "^3.1.9",
     "bootstrap": "^5.0.0-beta1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "prism-es6": "^1.2.0"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.5",
