--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@vue/compiler-sfc": "^3.0.5",
     "bili": "^5.0.5",
     "node-sass": "^5.0.0",
+    "node-sass-tilde-importer": "^1.0.2",
     "rollup-plugin-vue": "^5.0.0",
-    "sass": "^1.32.4",
+    "sass": "^1.32.5",
     "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12",
-    "node-sass-tilde-importer": "^1.0.2"
+    "vue-template-compiler": "^2.6.12"
   },
   "browserslist": [
     "node 14",
